Fix no scrollbar

--- a/www/Styles/css/App.css
+++ b/www/Styles/css/App.css
@@ -43,7 +43,7 @@ body {
     /*background-color: black;
     color: white;*/
     font: 20px "Arial Narrow";
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 h1, h2, h3, h4, h5, h6 {
